Update project page layouts and fix image references

--- a/index.html
+++ b/index.html
@@ -200,8 +200,10 @@
                 <div class="gallery-item full-width">
                     <img src="Weighted Light Studio/Exterior Perspective.jpg" alt="Exterior Perspective">
                 </div>
-                <div class="gallery-grid-2">
+                <div class="gallery-item full-width">
                     <img src="Weighted Light Studio/Elevation.jpg" alt="Elevation">
+                </div>
+                <div class="gallery-item full-width">
                     <img src="Weighted Light Studio/Interior Perspective.jpg" alt="Interior Perspective">
                 </div>
                 <div class="gallery-item full-width">
@@ -243,18 +245,16 @@
                 <div class="gallery-item full-width">
                     <img src="Charleston Music Conservatory/Section Perspective.jpg" alt="Section Perspective">
                 </div>
-                <div class="gallery-grid-2">
-                    <img src="Charleston Music Conservatory/Ground Floor Plan.jpg" alt="Ground Floor Plan">
-                    <img src="Charleston Music Conservatory/Second Floor Plan.jpg" alt="Second Floor Plan">
-                </div>
                 <div class="gallery-item full-width">
+                    <img src="Charleston Music Conservatory/Ground Floor Plan.jpg" alt="Ground Floor Plan">
+                </div>
+                <div class="gallery-grid-2">
+                    <img src="Charleston Music Conservatory/Second Floor Plan.jpg" alt="Second Floor Plan">
                     <img src="Charleston Music Conservatory/Third Floor Plan.jpg" alt="Third Floor Plan">
                 </div>
-                <div class="gallery-grid-2">
+                <div class="gallery-grid-3">
                     <img src="Charleston Music Conservatory/Section 1.jpg" alt="Section 1">
                     <img src="Charleston Music Conservatory/Section 2.jpg" alt="Section 2">
-                </div>
-                <div class="gallery-item full-width">
                     <img src="Charleston Music Conservatory/Section 3.jpg" alt="Section 3">
                 </div>
             </div>
@@ -274,26 +274,28 @@
             </div>
             <div class="detail-gallery">
                 <div class="gallery-item full-width">
+                    <img src="Florida Landscape/Model Image 1.png" alt="Model 1">
+                </div>
+                <div class="gallery-item full-width">
                     <img src="Florida Landscape/Sky Pool Perspective.jpg" alt="Sky Pool Perspective">
                 </div>
                 <div class="gallery-grid-2">
                     <img src="Florida Landscape/Site Plan.jpg" alt="Site Plan">
                     <img src="Florida Landscape/Section.jpg" alt="Section">
                 </div>
-                <div class="gallery-grid-2">
-                    <img src="Florida Landscape/Lake Pool Perspective.pdf" alt="Lake Pool Perspective">
-                    <img src="Florida Landscape/Nature Pool Perspective.pdf" alt="Nature Pool Perspective">
+                <div class="gallery-item full-width">
+                    <img src="Florida Landscape/Lake Pool Perspective.jpg" alt="Lake Pool Perspective">
+                </div>
+                <div class="gallery-item full-width">
+                    <img src="Florida Landscape/Nature Pool Perspective.jpg" alt="Nature Pool Perspective">
                 </div>
                 <!-- Models Grid -->
                 <div class="gallery-grid-2">
-                    <img src="Florida Landscape/Model Image 1.png" alt="Model 1">
                     <img src="Florida Landscape/Model Image 2.png" alt="Model 2">
+                    <img src="Florida Landscape/Model Image 3.png" alt="Model 3">
                 </div>
                 <div class="gallery-grid-2">
-                    <img src="Florida Landscape/Model Image 3.png" alt="Model 3">
                     <img src="Florida Landscape/Model Image 4.png" alt="Model 4">
-                </div>
-                <div class="gallery-item full-width">
                     <img src="Florida Landscape/Model Image 5.png" alt="Model 5">
                 </div>
             </div>
