Fix broken images in Stadium Lawn and Tower, update Florida Landscape cover

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <!-- Project 04: Florida Landscape -->
                 <article class="project-card" data-project="florida-landscape">
                     <div class="card-image-wrapper">
-                        <img src="Florida Landscape/Sky Pool Perspective.jpg"
+                        <img src="Florida Landscape/Model Image 1.png"
                             onerror="this.src='https://via.placeholder.com/800x600/ccc/333?text=Project+04'"
                             alt="Florida Landscape">
                         <div class="card-overlay" style="--overlay-color: var(--color-florida);"></div>
@@ -169,7 +169,7 @@
                             </div>
                         </div>
                         <div class="gallery-item full-width" style="margin-bottom: 40px;">
-                            <img src="Stadium Lawn/Section Perspective 1.jpg" alt="Section Perspective 1"
+                            <img src="Stadium Lawn/Section Perspective 1.png" alt="Section Perspective 1"
                                 style="width: 100%; display: block;">
                         </div>
                         <div class="gallery-item full-width" style="margin-bottom: 40px;">
@@ -178,7 +178,7 @@
                         </div>
                     </div>
                     <div class="gallery-item full-width">
-                        <img src="Stadium Lawn/Longitudinal Section.pdf" alt="Longitudinal Section"
+                        <img src="Stadium Lawn/Longitudinal Section.jpg" alt="Longitudinal Section"
                             class="gallery-item full-width" style="width: 100%; height: auto; display: block;">
                     </div>
                 </div>
@@ -333,9 +333,6 @@
                 <div class="gallery-grid-2">
                     <img src="Tower/Model Image 1.jpg" alt="Model 1">
                     <img src="Tower/Model Image 2.jpg" alt="Model 2">
-                </div>
-                <div class="gallery-item full-width">
-                    <img src="Tower/Model Image 3.jpg" alt="Model 3">
                 </div>
             </div>
         </div>
