Update Florida Landscape cover image to Sky Pool Perspective

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <!-- Project 04: Florida Landscape -->
                 <article class="project-card" data-project="florida-landscape">
                     <div class="card-image-wrapper">
-                        <img src="Florida Landscape/Model Image 1.png"
+                        <img src="Florida Landscape/Sky Pool Perspective.jpg"
                             onerror="this.src='https://via.placeholder.com/800x600/ccc/333?text=Project+04'"
                             alt="Florida Landscape">
                         <div class="card-overlay" style="--overlay-color: var(--color-florida);"></div>
@@ -274,10 +274,10 @@
             </div>
             <div class="detail-gallery">
                 <div class="gallery-item full-width">
-                    <img src="Florida Landscape/Model Image 1.png" alt="Model 1">
+                    <img src="Florida Landscape/Sky Pool Perspective.jpg" alt="Sky Pool Perspective">
                 </div>
                 <div class="gallery-item full-width">
-                    <img src="Florida Landscape/Sky Pool Perspective.jpg" alt="Sky Pool Perspective">
+                    <img src="Florida Landscape/Model Image 1.png" alt="Model 1">
                 </div>
                 <div class="gallery-grid-2">
                     <img src="Florida Landscape/Site Plan.jpg" alt="Site Plan">
