Finalize all project page updates and fixes

--- a/index.html
+++ b/index.html
@@ -353,8 +353,8 @@
                         alt="Campus Bus Stop Board" style="width: 100%; display: block;">
                 </div>
                 <div class="gallery-grid-2">
-                    <img src="Other Work/Campus Bus Stop Project/IMG_7932.JPG" alt="Bus Stop Model 1">
-                    <img src="Other Work/Campus Bus Stop Project/IMG_7936.JPG" alt="Bus Stop Model 2">
+                    <img src="Other Work/Campus Bus Stop Project/Model Image 1.JPG" alt="Bus Stop Model 1">
+                    <img src="Other Work/Campus Bus Stop Project/Model Image 2.JPG" alt="Bus Stop Model 2">
                 </div>
             </div>
 
@@ -366,8 +366,8 @@
                         style="width: 100%; display: block;">
                 </div>
                 <div class="gallery-grid-2">
-                    <img src="Other Work/Lamp Project/IMG_8378.JPG" alt="Lamp Model 1">
-                    <img src="Other Work/Lamp Project/IMG_8381.JPG" alt="Lamp Model 2">
+                    <img src="Other Work/Lamp Project/Lamp Image 1.JPG" alt="Lamp Model 1">
+                    <img src="Other Work/Lamp Project/Lamp Image 2.JPG" alt="Lamp Model 2">
                 </div>
             </div>
 
