Add cache busting for Weighted Light Studio elevation image

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                     <img src="Weighted Light Studio/Exterior Perspective.jpg" alt="Exterior Perspective">
                 </div>
                 <div class="gallery-item full-width">
-                    <img src="Weighted Light Studio/Elevation.jpg" alt="Elevation">
+                    <img src="Weighted Light Studio/Elevation.jpg?v=1.1" alt="Elevation">
                 </div>
                 <div class="gallery-item full-width">
                     <img src="Weighted Light Studio/Interior Perspective.jpg" alt="Interior Perspective">
